# EigenCUDA

./: CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
EigenCUDA/: CMakeLists.txt
EigenCUDA/include/: main.cu  test_eigen_decomp.h  test_svd.h
cmake/: eigen.cmake
